syntax = "proto3";

import "./bytesTransaction.proto";

message bytesBlock {
    bytes data = 1;
    repeated bytesTransaction transactions = 2;
}